<resources>
    <string name="app_name">Movies</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_toprated">Top Rated</string>
    <string name="menu_popular">Popular</string>
    <string name="menu_nowplaying">Now Playing</string>
    <string name="menu_details">Movie Details</string>
    <string name="menu_biograply">Biography</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>