<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.movies.ui.topRated.TopRatedFragment"
        android:label="@string/menu_toprated"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_detailsFragment"
            app:destination="@id/detailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.movies.ui.popular.PopularFragment"
        android:label="@string/menu_popular"
        tools:layout="@layout/fragment_gallery" >
        <action
            android:id="@+id/action_nav_gallery_to_detailsFragment"
            app:destination="@id/detailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.movies.ui.nowPlaying.NowPlayingFragment"
        android:label="@string/menu_nowplaying"
        tools:layout="@layout/fragment_slideshow" >
        <action
            android:id="@+id/action_nav_slideshow_to_detailsFragment"
            app:destination="@id/detailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.example.movies.ui.details.DetailsFragment"
        android:label="@string/menu_details"
        tools:layout="@layout/fragment_details">
        <argument
            android:name="movie_id"
            app:argType="integer" />
        <action
            android:id="@+id/action_detailsFragment_self"
            app:destination="@id/detailsFragment" />
        <action
            android:id="@+id/action_detailsFragment_to_biographyFragment"
            app:destination="@id/biographyFragment" />
    </fragment>
    <fragment
        android:id="@+id/biographyFragment"
        android:name="com.example.movies.ui.details.BiographyFragment"
        android:label="@string/menu_biograply"
        tools:layout="@layout/fragment_biography">
        <argument
            android:name="people_id"
            app:argType="integer" />
    </fragment>
</navigation>